--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: black;
-    padding-top: 400px;
+    padding-bottom: 250px;
+  
 }
 
 .sub-heading {
@@ -58,7 +59,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding-top: 500px;
+    padding-bottom: 150px;
 
 }
 
@@ -74,7 +75,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: black;
-    padding-top: 650px;
     font-size: 75px;
   }
 
